--- a/web-scraping-using-selenium.ipynb
+++ b/web-scraping-using-selenium.ipynb
@@ -5,7 +5,7 @@
    "id": "5ecf24ff",
    "metadata": {},
    "source": [
-    "# **Web Scraping using Selenium in Python**\n",
+    "# **Web Scraping and Automation using Selenium in Python**\n",
     "\n",
     "Selenium is a tool that is used for automating web browsers. It allows users to write scripts and programs that can interact with web pages in the same way that a user would, including clicking buttons, entering text, and navigating to different pages. Selenium is often used for web scraping, testing web applications, and automating repetitive tasks on the web.\n",
     "Selenium is a powerful tool that can be used with many different programming languages, including Python, Java, and C#. It provides a rich and flexible API that allows users to control web browsers in a variety of ways, including simulating user interactions, extracting data from web pages, and performing actions on multiple web pages at once."
